<resources>
    <string name="app_name">Mbuddy</string>

    <!--Signup and Login-->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
</resources>
