<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue"
        tools:context=".view.ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/BMessenger.HintText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_large"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:textColorHint="@color/colorHint"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/BMessenger.HintText"
            app:layout_constraintTop_toBottomOf="@id/input_username"
            android:layout_margin="@dimen/margin_large"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:textColorHint="@color/colorHint"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/input_email"
            android:layout_margin="@dimen/margin_large"
            app:hintTextAppearance="@style/BMessenger.HintText"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/BMessenger.HintText"
            app:layout_constraintTop_toBottomOf="@id/input_password"
            android:layout_margin="@dimen/margin_large"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorHint"
                android:hint="@string/confirm_password"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/btnSignUp"
            style="@style/Button.Yellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/margin_x_large"
            app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
            android:layout_marginEnd="@dimen/margin_xx_large"
            android:layout_marginStart="@dimen/margin_xx_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>