<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue"
        tools:context=".view.ui.MainActivity">


    <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/BMessenger.HintText"
                android:layout_margin="@dimen/margin_large"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:hint="@string/email"
                                                                     android:textColorHint="@color/colorHint"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/input_email"
                android:layout_margin="@dimen/margin_large"
                app:hintTextAppearance="@style/BMessenger.HintText"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:hint="@string/password"
                                                                     android:textColorHint="@color/colorHint"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/btn_sign_up"
                style="@style/Button.Yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_margin="@dimen/margin_xx_large"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/colorWhite"
                android:background="?selectableItemBackgroundBorderless"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>